--- a/app/globals.css
+++ b/app/globals.css
@@ -168,7 +168,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url('/images/tissu.png');
+  background-image: url('/images/tissu.jpg');
   background-size: cover;
   background-position: center;
 }
